--- a/_sass/2-components/_navigation.sass
+++ b/_sass/2-components/_navigation.sass
@@ -39,6 +39,7 @@ header
 .navigation-menu-wrapper.open
   transition: $primary-transition
   transform: translateX(-100%)
+  z-index: 100
 
 .navigation-link
   color: $primary-text-color
